--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 .centre {
-  border: 5px solid;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 10px;
+  width: 900px;
 }
 
 .hcentre {
@@ -27,4 +27,19 @@ div.horizontalgap {
 
 .custom-select-menu {
   width: 250px !important;
+}
+
+body {
+  background-color: #0D0017;
+}
+
+.gradient-button {
+  background-image: linear-gradient(to bottom, #ff6b6b, #ffa04d, #66a8d8, #5ecc8f);
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-position 0.3s ease-in-out;
 }
